--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -10,9 +10,9 @@
 
     <mat-menu #menu="matMenu">
       <button mat-menu-item [matMenuTriggerFor]="booking">預約訂車</button>
-      <button mat-menu-item [matMenuTriggerFor]="search">趟次查詢</button>
+      <button mat-menu-item [matMenuTriggerFor]="search">趟次管理</button>
       <button mat-menu-item [matMenuTriggerFor]="download">文件下載</button>
-      <button mat-menu-item [matMenuTriggerFor]="quota">額度查詢</button>
+      <button mat-menu-item [matMenuTriggerFor]="quota">長照查詢</button>
     </mat-menu>
 
     <mat-menu #booking="matMenu">
@@ -22,9 +22,8 @@
     </mat-menu>
 
     <mat-menu #search="matMenu">
-      <button mat-menu-item>我的趟次</button>
-      <button mat-menu-item>我的個案</button>
-      <button mat-menu-item>長照資格查詢</button>
+      <button mat-menu-item>趟次查詢</button>
+      <button mat-menu-item>行事曆</button>
 
     </mat-menu>
 
@@ -37,7 +36,8 @@
     </mat-menu>
 
     <mat-menu #quota="matMenu">
-      <button mat-menu-item>餘額查詢</button>
+      <button mat-menu-item>長照資格</button>
+      <button mat-menu-item>爬梯機餘額</button>
       <button mat-menu-item routerLink="menu/quota/quota-count">補收試算</button>
     </mat-menu>
 
