--- a/src/app/page/menu/booking/taoyuan/taoyuan.component.html
+++ b/src/app/page/menu/booking/taoyuan/taoyuan.component.html
@@ -1,1 +1,93 @@
-<p>taoyuan works!</p>
+<div class="container">
+  <h1> 桃園長照預約 </h1>
+
+<form [formGroup]="form" (ngSubmit)="onSubmit(f)" #f="ngForm">
+
+  <div class="form-group">
+    <input type="hidden" class="form-control" formControlName="Area" value="taoyuan">
+    <input type="hidden" class="form-control" formControlName="DUID" value="DUID">
+  </div>
+
+  <div class="form-group">
+    <label for="PassengerName">個案姓名： </label>
+    <input type="text" class="form-control" id="PassengerName" formControlName="PassengerName">
+    <div class="text-danger" *ngIf="form.controls.PassengerName.errors && form.controls.PassengerName.touched && form.controls.PassengerName.invalid">
+      <div *ngIf="form.controls.PassengerName.errors.required">*個案姓名為必填欄位</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="PassengerId">個案身份證： </label>
+    <input type="text" class="form-control" id="PassengerId" formControlName="PassengerId">
+    <div class="text-danger" *ngIf="form.controls.PassengerId.errors && form.controls.PassengerId.touched && form.controls.PassengerId.invalid">
+      <div *ngIf="form.controls.PassengerId.errors.required">*身份證為必填欄位</div>
+      <div *ngIf="form.controls.PassengerId.errors.minlength">*請輸入正確身分證共十碼</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="Date">預約日期： </label>
+    <input type="date" class="form-control" id="Date" formControlName="Date">
+    <div class="text-danger" *ngIf="form.controls.Date.errors && form.controls.Date.touched && form.controls.DateDate.invalid">
+      <div *ngIf="form.controls.Date.errors.required">*預約日期為必填欄位</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="RTime">去程時間： </label>
+    <input type="time" class="form-control" id="RTime" formControlName="RTime">
+    <div class="text-danger" *ngIf="form.controls.RTime.errors && form.controls.RTime.touched && form.controls.RTime.invalid">
+      <div *ngIf="form.controls.RTime.errors.required">*去程時間為必填欄位</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="BTime">回程時間 ( 如果只有單趟就不用填 )： </label>
+    <input type="time" class="form-control" id="BTime" formControlName="BTime">
+  </div>
+
+  <div class="form-group">
+    <label for="PUAddress">上車地址：  </label>
+    <input type="text" class="form-control" id="PUAddress" formControlName="PUAddress">
+    <div class="text-danger" *ngIf="form.controls.PUAddress.errors && form.controls.PUAddress.touched && form.controls.PUAddress.invalid">
+      <div *ngIf="form.controls.PUAddress.errors.required">*上車地址為必填欄位</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="DPAddress">下車地址：  </label>
+    <input type="text" class="form-control" id="DPAddress" formControlName="DPAddress">
+    <div class="text-danger" *ngIf="form.controls.DPAddress.errors && form.controls.DPAddress.touched && form.controls.DPAddress.invalid">
+      <div *ngIf="form.controls.DPAddress.errors.required">*下車地址為必填欄位</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="Telephone">聯絡方式： </label>
+    <input type="tel" class="form-control" id="Telephone" formControlName="Telephone" inputmode="numeric" placeholder="格式：0912345678">
+    <div class="text-danger" *ngIf="form.controls.Telephone.errors && form.controls.Telephone.touched && form.controls.Telephone.invalid">
+      <div *ngIf="form.controls.Telephone.errors.required">*聯絡方式為必填欄位</div>
+      <div *ngIf="form.controls.Telephone.errors.minlength">*請輸入正確行動電話</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="Remark">備註事項： </label>
+    <input type="text" class="form-control" id="Remark" formControlName="Remark">
+  </div>
+
+  <div class="form-group">
+    <label for="Option">預約項目：  </label>
+    <input type="radio" class="options " value="爬梯機+交通" formControlName="Option" >爬梯機+交通
+    <input type="radio" class="options" value="僅爬梯機"  formControlName="Option">僅爬梯機
+  </div>
+
+
+
+<div class="btn">
+  <button type="submit" class="btn btn-dark" >提交</button>
+</div>
+
+</form>
+
+</div>
