--- a/src/app/page/menu/booking/taoyuan/taoyuan.component.css
+++ b/src/app/page/menu/booking/taoyuan/taoyuan.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 .container{
-  background-color: #E6CFE6;
+  background-color: #FFE5B4;
   padding-top: 20px;
   border-radius: 8px;
 }
