--- a/src/app/page/menu/booking/booking.component.css
+++ b/src/app/page/menu/booking/booking.component.css
@@ -28,7 +28,7 @@
 }
 
 .newTaipei{
-  background-color: bisque;
+  background-color: #FFDAB9;
   width: 80%;
   font-size: 30px;
   border-radius: 10px;
@@ -36,7 +36,7 @@
 }
 
 .taoyuan{
-  background-color: bisque;
+  background-color: #FFE5B4;
   width: 80%;
   font-size: 30px;
   border-radius: 10px;
