--- a/src/app/page/menu/search/search.component.html
+++ b/src/app/page/menu/search/search.component.html
@@ -1,33 +1,66 @@
-<h1>我的個案 訂車查詢</h1>
-<div>
-  <label for="pidInput">個案身分證：</label>
-  <input type="text" id="pidInput" [(ngModel)]="pid"> <br>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-  <label for="pnameInput">個案姓名：</label>
-  <input type="text" id="pnameInput" [(ngModel)]="pname"><br>
+<body>
+  <h1>我的訂車查詢</h1>
 
-  <input type="hidden" id="duidInput" [(ngModel)]="duid">
+  <div class="container">
+    <i class="bi bi-question-circle" (click)="showPrompt()"></i>
+    <div class="input_area">
+      <label for="pnameInput">個 案 姓 名 ：</label>
+      <input type="text" id="pnameInput" placeholder="請選填一項" [(ngModel)]="pname">
+      <label for="pidInput" >個案身分證：</label>
+      <input type="text" id="pidInput" placeholder="開頭請大寫" [(ngModel)]="pid">
 
-  <button class="btn btn-dark" (click)="sendDataToAPI()">查詢</button>
-  <button class="btn btn-danger" (click)="clearInputs()">清除文字</button>
-  <button class="btn btn-success" (click)="sortAppointments()">按日期排序</button>
 
-</div>
+      <input type="hidden" id="duidInput" [(ngModel)]="duid">
+    </div>
 
-<p *ngIf="appointments.length > 0">{{ searchText }}</p>
+    <div class="btn_group">
+      <button class="btn btn-dark" (click)="sendDataToAPI()">查詢</button>
 
-<div *ngIf="appointments.length > 0">
-  <div *ngFor="let appointment of appointments">
-    <div class="card" style="width: 18rem;">
-      <p>預約日期: {{ appointment.Date }}</p>
-      <p>去程時間: {{ appointment.RTime}}</p>
-      <p>回程時間: {{ appointment.BTime}}</p>
-      <p>上車地點: {{ appointment.PUAddress}}</p>
-      <p>下車地點: {{ appointment.DPAddress}}</p>
+      <div class="btn2">
+        <button class="btn btn-danger" (click)="clearInputs()">清除</button>
+        <button class="btn btn-success" (click)="sortAppointments()">日期排序</button>
+      </div>
+    </div>
+
+    <div class="searchText">
+      <p *ngIf="appointments.length > 0">{{ searchText }}</p>
+      <p *ngIf="appointments.length > 0">點擊該卡片，可以直接跳轉到預約用車頁面</p>
+    </div>
+
+    <div class="d-flex justify-content-center" *ngIf="isLoading" >
+      <div class="spinner-border"  role="status">
+        <span class="visually-hidden"></span>
+      </div> <br>
+    </div>
+
+    <div *ngIf="appointments.length > 0">
+      <div *ngFor="let appointment of appointments" class="card" (click)="navigateToAreaComponent(appointment)">
+        <div class="card-content">
+          <div class="card-number">
+            <p>{{ appointments.indexOf(appointment) + 1 }}</p>
+          </div>
+          <div class="card-separator"></div>
+          <div class="card-details">
+            <p>地區 : {{ appointment.Area }}</p>
+            <p>個案資料 : {{ appointment.PassengerName }}  |  {{ appointment.PassengerId }} </p>
+            <p>預約日期 : {{ appointment.Date }}</p>
+            <p>預約時間 : {{ appointment.RTime }} | {{ appointment.BTime }}</p>
+            <p>上車地點 : {{ appointment.PUAddress }}</p>
+            <p>下車地點 : {{ appointment.DPAddress }}</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <div *ngIf="showNoData" class="nodata">
+      <p>查無資料，請重新確認輸入資料！</p>
     </div>
   </div>
-</div>
 
-<div *ngIf="showNoData">
-  <p>查無資料，請重新確認輸入資料是否正確</p>
-</div>
+
+
+
