定車查詢更新

--- a/src/app/core/component/header/header.component.css
+++ b/src/app/core/component/header/header.component.css
@@ -5,7 +5,7 @@
   background-color: black;
   margin-bottom: 15px;
   padding: 0;
-  justify-content:space-between;
+
   height: 40px;
 }
 
@@ -23,7 +23,7 @@
   letter-spacing: 4px;
   text-decoration: none;
   color: white;
-  width: 200px;
+  width: 300px;
   height: 40px;
 }
 
@@ -32,6 +32,10 @@
   margin-left: 20px;
 }
 
+.text{
+  display: flex;
+  justify-content: center;
+}
 
 
 
