--- a/src/app/page/menu/quota/quota-count/quota-count.component.html
+++ b/src/app/page/menu/quota/quota-count/quota-count.component.html
@@ -1,5 +1,5 @@
 <div class="inputbox">
-  <input type="number" [(ngModel)]="numberInput" (input)="validateNumber()"  min="0" max="700" placeholder="請輸入餘額" />
+  <input type="number" [(ngModel)]="numberInput" (input)="validateNumber()"  min="0" max="700" placeholder="請輸入餘額 0~700" />
   <button (click)="clearInputs()"  class="btn btn-dark">清除</button>
 </div>
 
