--- a/src/app/page/menu/search/search.component.css
+++ b/src/app/page/menu/search/search.component.css
@@ -13,8 +13,8 @@ h1 {
 .card {
   padding: 8px;
   margin-bottom: 10px;
-  border: 2px solid #ccc;
-  background-color: 	#FFEBCD;
+  border: 1.5px solid #4a4e69;
+  background-color: 		#f5f3f4;
 }
 
 
@@ -39,14 +39,14 @@ p {
 }
 
 .card-number{
-  padding-right: 12px;
+  padding-right: 15px;
+  padding-left: 5px;
   font-weight: bold;
 }
 
 
 input{
-  width: 65%;
-  padding-left: 5px;
+  padding-left: 8px;
 }
 
 label{
@@ -71,10 +71,18 @@ label{
 
 .nodata p{
   font-size: 20px;
+  color: red;
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .bi-question-circle{
   display: flex;
   justify-content: end;
   margin-bottom: 5px;
+}
+
+.btn{
+  font-weight: bold;
 }
