--- a/src/app/page/menu/menu.component.html
+++ b/src/app/page/menu/menu.component.html
@@ -7,13 +7,15 @@
     <a routerLink="search">趟次查詢</a>
   </div>
 
+  <div class="quota">
+    <a routerLink="quota">長照查詢</a>
+  </div>
+
   <div class="download">
     <a routerLink="download">文件下載</a>
   </div>
 
-  <div class="quota">
-    <a routerLink="quota">額度查詢</a>
-  </div>
+
 
 </div>
 
