--- a/src/app/page/menu/quota/quota.component.html
+++ b/src/app/page/menu/quota/quota.component.html
@@ -1,1 +1,14 @@
-<p>quota works!</p>
+<div class="centered-links">
+  <div class="taipei">
+    <a routerLink="qualifications" >新北長照資格查詢</a>
+  </div>
+
+  <div class="newTaipei">
+    <a routerLink="quota-search">額度 請款表查詢</a>
+  </div>
+
+  <div class="taoyuan">
+    <a routerLink="quota-count">補收試算</a>
+  </div>
+
+</div>
