--- a/src/app/page/menu/quota/quota-search/quota-search.component.css
+++ b/src/app/page/menu/quota/quota-search/quota-search.component.css
@@ -64,3 +64,11 @@ a{
   justify-content: center;
   font-weight: bold;
 }
+
+
+h4{
+  font-size: 18px;
+  margin-bottom: 6px;
+  padding: 5px;
+  font-weight: bold;
+}
