--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -12,7 +12,7 @@
       <button mat-menu-item [matMenuTriggerFor]="booking">預約訂車</button>
       <button mat-menu-item routerLink="menu/search">趟次管理</button>
       <button mat-menu-item [matMenuTriggerFor]="quota">長照查詢</button>
-      <button mat-menu-item [matMenuTriggerFor]="download">文件下載</button>
+      <button mat-menu-item routerLink="menu/download">文件下載</button>
 
     </mat-menu>
 
@@ -23,17 +23,9 @@
     </mat-menu>
 
 
-    <mat-menu #download="matMenu">
-      <button mat-menu-item routerLink="menu/download">福倫爬梯機文件</button>
-      <button mat-menu-item>台北</button>
-      <button mat-menu-item>新北</button>
-      <button mat-menu-item>桃園</button>
-      <button mat-menu-item>基隆</button>
-    </mat-menu>
-
     <mat-menu #quota="matMenu">
       <button mat-menu-item routerLink="menu/quota/qualifications">新北長照資格</button>
-      <button mat-menu-item>爬梯機相關</button>
+      <button mat-menu-item routerLink="menu/quota/quota-search">爬梯機相關</button>
       <button mat-menu-item routerLink="menu/quota/quota-count">補收試算</button>
     </mat-menu>
 
