--- a/src/app/page/menu/search/search.component.html
+++ b/src/app/page/menu/search/search.component.html
@@ -25,7 +25,7 @@
 
     <div class="searchText">
       <p *ngIf="appointments.length > 0">{{ searchText }}</p>
-      <p *ngIf="appointments.length > 0">點擊該卡片，可以直接跳轉到預約用車頁面</p>
+      <p *ngIf="appointments.length > 0">** 點擊該筆訂單，可直接跳轉到預約訂車頁面 **</p>
     </div>
 
     <div class="d-flex justify-content-center" *ngIf="isLoading" >
