--- a/src/app/page/menu/quota/qualifications/qualifications.component.html
+++ b/src/app/page/menu/quota/qualifications/qualifications.component.html
@@ -1,1 +1,42 @@
-<p>qualifications works!</p>
+<div class="container">
+  <h1>新北長照資格查詢</h1>
+  <div class="input-area">
+    <input type="text" id="keyInput" placeholder="請輸入個案姓名或身分證" [(ngModel)]="key">
+    <div class="btn-g">
+      <button class="btn btn-dark" (click)="searchQuota()">查詢</button>
+      <button class="btn btn-danger" (click)="clearInputs()">清除</button>
+    </div>
+  </div>
+
+  <div *ngIf="showEmptyKeyWarning" class="no-data-text">
+    <p>請填寫身分證或名字後再提交！</p>
+  </div>
+
+  <div class="d-flex justify-content-center" *ngIf="isLoading" >
+    <div class="spinner-border"  role="status">
+      <span class="visually-hidden"></span>
+    </div>
+  </div>
+
+  <div *ngIf="LTCCaseList.length === 0 && showNoDataMessage" class="no-data-text">
+    <p>查無資料，請重新確認輸入內容！</p>
+    <p>如是當天照會個案，可能因資料庫尚未更新而查詢不到資料，請點擊下方Line連結通知人員再次確認是否照會，謝謝！！</p>
+    <a href="https://lin.ee/F9sIMMq" target="_blank">新北爬梯機Line@</a>
+  </div>
+
+  <div *ngIf="qualifications.length > 0">
+    <div *ngFor="let qualification of qualifications" class="quota-card">
+      <p>個案姓名： {{ qualification.PassengerName }}</p>
+      <p>身分證字號： {{ qualification.PassengerId }}</p>
+      <p>身分別： {{ qualification.Category }}戶</p>
+      <p>家屬姓名： {{ qualification.Contact }}</p>
+
+      <div *ngIf="splitTelephones.length > 0">
+        <p>連絡電話：</p>
+        <ng-container *ngFor="let phone of splitTelephones">
+          <p>{{ phone }}</p>
+        </ng-container>
+      </div>
+  </div>
+
+</div>
