--- a/src/app/page/menu/quota/quota.component.html
+++ b/src/app/page/menu/quota/quota.component.html
@@ -1,14 +1,14 @@
 <div class="centered-links">
   <div class="taipei">
-    <a routerLink="qualifications" >新北長照資格查詢</a>
+    <a routerLink="qualifications" >新北長照資格</a>
   </div>
 
   <div class="newTaipei">
-    <a routerLink="quota-search">額度 請款表查詢</a>
+    <a routerLink="quota-search">爬梯機額度&請款表</a>
   </div>
 
   <div class="taoyuan">
-    <a routerLink="quota-count">補收試算</a>
+    <a routerLink="quota-count">爬梯機補收試算</a>
   </div>
 
 </div>
