--- a/src/app/page/menu/quota/quota.component.css
+++ b/src/app/page/menu/quota/quota.component.css
@@ -25,66 +25,26 @@
   font-size: 30px;
   border-radius: 10px;
   margin: 10px 0;
+  letter-spacing: 2px;
 }
 
 .newTaipei{
   background-color: #FFDAB9;
   width: 80%;
-  font-size: 30px;
+  font-size: 26px;
   border-radius: 10px;
   margin: 10px 0;
+  letter-spacing: 2px;
 }
 
 .taoyuan{
   background-color: #FFE5B4;
   width: 80%;
-  font-size: 30px;
+  font-size: 26px;
   border-radius: 10px;
   margin: 10px 0;
+  letter-spacing: 2px;
 }
 
-.centered-links {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
 
-.centered-links a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: black;
-  padding: 10px 0;
-  width: 100%;
-  height: 80px;
-  font-weight: bold;
-
-}
-
-.taipei{
-  background-color: #FFE8DB;
-  width: 80%;
-  font-size: 30px;
-  border-radius: 10px;
-  margin: 10px 0;
-}
-
-.newTaipei{
-  background-color: #FFDAB9;
-  width: 80%;
-  font-size: 30px;
-  border-radius: 10px;
-  margin: 10px 0;
-}
-
-.taoyuan{
-  background-color: #FFE5B4;
-  width: 80%;
-  font-size: 30px;
-  border-radius: 10px;
-  margin: 10px 0;
-}
 
