--- a/src/app/page/menu/booking/new-taipei/new-taipei.component.css
+++ b/src/app/page/menu/booking/new-taipei/new-taipei.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 .container{
-  background-color:#FFDAB9;
+  background-color:#ffe5cf;
   padding-top: 20px;
   border-radius: 8px;
 }
