--- a/src/app/page/menu/booking/taipei/taipei.component.css
+++ b/src/app/page/menu/booking/taipei/taipei.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 .container{
-  background-color: #FFE8DB;
+  background-color: #ffebd4;
   padding-top: 20px;
   border-radius: 8px;
 }
