--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="text">
-      <span ><a href="menu" class="nav_text">福倫小幫手</a></span>
+      <span ><a href="menu" class="nav_text">福倫長照訂車</a></span>
     </div>
 
   </div>
