--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -31,7 +31,8 @@
     </div>
 
     <div class="text">
-      <span ><a href="menu" class="nav_text">福倫長照訂車</a></span>
+      <!-- <span ><a href="menu" class="nav_text">福倫長照訂車</a></span> -->
+      <span  routerLink="menu" class="nav_text">福倫長照訂車</span>
     </div>
 
   </div>
