--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
 <header>
   <div class="navbar2">
 
@@ -34,6 +37,11 @@
       <!-- <span ><a href="menu" class="nav_text">福倫長照訂車</a></span> -->
       <span  routerLink="menu" class="nav_text">福倫長照訂車</span>
     </div>
+
+    <div class="home">
+      <i class="bi bi-house" (click)="backToMenu()"> </i>
+    </div>
+
 
   </div>
 </header>
