--- a/src/app/page/menu/search/search.component.css
+++ b/src/app/page/menu/search/search.component.css
@@ -79,7 +79,7 @@ label{
 
 .bi-question-circle{
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-bottom: 5px;
 }
 
