--- a/src/app/page/menu/quota/qualifications/qualifications.component.css
+++ b/src/app/page/menu/quota/qualifications/qualifications.component.css
@@ -1,7 +1,7 @@
 .quota-card{
   padding: 8px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 8px;
   border: 1.5px solid #4a4e69;
   background-color: 		#FFFFF0;
   border-radius: 6px;
@@ -70,10 +70,11 @@ a{
 
 
 h4{
-  font-size: 18px;
-  margin-bottom: 6px;
-  padding: 5px;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
   font-weight: bold;
+  margin-top: 10px;
 }
 
 .no-data-text a{
