長照資格查詢功能更新

--- a/src/app/page/menu/quota/qualifications/qualifications.component.html
+++ b/src/app/page/menu/quota/qualifications/qualifications.component.html
@@ -37,9 +37,8 @@
       <p></p>
 
       <div *ngIf="splitTelephones.length > 0">
-        <p>連絡電話：</p>
         <ng-container *ngFor="let phone of splitTelephones">
-          <p>{{ phone }}</p>
+          <p>連絡電話：{{ phone }}</p>
         </ng-container>
       </div>
   </div>
