--- a/src/app/page/menu/quota/quota-search/quota-search.component.html
+++ b/src/app/page/menu/quota/quota-search/quota-search.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>額度查詢</h1>
+  <h1>爬梯機查詢</h1>
   <div class="input-area">
     <input type="text" id="keyInput" placeholder="請輸入個案姓名或身分證" [(ngModel)]="key">
     <div class="btn-g">
