--- a/src/app/page/menu/quota/quota-search/quota-search.component.css
+++ b/src/app/page/menu/quota/quota-search/quota-search.component.css
@@ -18,12 +18,13 @@ h1 {
   border-radius: 5px;
   height: 35px;
   letter-spacing: 2px;
+  font-size: 26px;
 }
 
 input{
-  padding-left: 8px;
+  padding-left: 3px;
   height: 36px;
-  font-size: 18x;
+  font-size: 16px;
 }
 
 label{
@@ -50,7 +51,7 @@ a{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 2px;
 }
 
 .btn{
@@ -73,3 +74,14 @@ h4{
   padding: 5px;
   font-weight: bold;
 }
+
+.keyInput{
+  width: 55%;
+}
+
+.prompt{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+}
+
