--- a/src/app/page/menu/quota/quota-search/quota-search.component.html
+++ b/src/app/page/menu/quota/quota-search/quota-search.component.html
@@ -1,7 +1,12 @@
 <div class="container">
   <h1>爬梯機查詢</h1>
+
+  <div class="prompt">
+    <i class="bi bi-question-circle" style="font-size: 1.5em;" (click)="showPrompt()"></i>
+  </div>
+
   <div class="input-area">
-    <input type="text" id="keyInput" placeholder="請輸入個案姓名或身分證" [(ngModel)]="key">
+    <input type="text" id="keyInput" class="keyInput" placeholder="請輸入個案姓名或身分證" [(ngModel)]="key">
     <div class="btn-g">
       <button class="btn btn-dark" (click)="searchQuota()">查詢</button>
       <button class="btn btn-danger" (click)="clearInputs()">清除</button>
