--- a/src/app/page/menu/search/search.component.css
+++ b/src/app/page/menu/search/search.component.css
@@ -46,9 +46,7 @@ p {
 }
 
 
-input{
-  padding-left: 8px;
-}
+
 
 label{
   font-weight: bold;
@@ -56,12 +54,8 @@ label{
 
 .btn_group{
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
   margin-top: 10px;
-}
-
-.btn-danger{
-  margin-right: 5px;
 }
 
 
@@ -86,4 +80,34 @@ label{
 
 .btn{
   font-weight: bold;
+  font-size: 14px;
+  margin-right: 3px;
+}
+
+
+.input_area{
+  display: block;
+}
+
+
+.datefilter{
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+
+.btn2{
+  display: flex;
+  align-items: center;
+}
+
+.date-input{
+  width: 210px;
+}
+
+.filter{
+  display: flex;
+  align-items: center;
 }
