--- a/src/app/page/menu/search/search.component.html
+++ b/src/app/page/menu/search/search.component.html
@@ -1,27 +1,55 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-<body>
   <h1>我的訂車查詢</h1>
 
   <div class="container">
+
     <i class="bi bi-question-circle" style="font-size: 1.3em;" (click)="showPrompt()"></i>
+
+
     <div class="input_area">
-      <label for="pnameInput">個 案 姓 名 ：</label>
-      <input type="text" id="pnameInput" placeholder="請選填一項或直接查詢" [(ngModel)]="pname">
-      <label for="pidInput" >個案身分證：</label>
-      <input type="text" id="pidInput" placeholder="開頭請大寫" [(ngModel)]="pid">
-
-
-      <input type="hidden" id="duidInput" [(ngModel)]="duid">
+      <div class="pnameinput">
+        <label for="pnameInput">個 案 姓 名 ：</label>
+        <input type="text" id="pnameInput" placeholder="請選填一項或直接查詢" [(ngModel)]="pname">
+      </div>
+      <div class="pidinput">
+        <label for="pidInput" >個案身分證：</label>
+       <input type="text" id="pidInput" placeholder="開頭請大寫" [(ngModel)]="pid">
+      </div>
     </div>
 
     <div class="btn_group">
-      <button class="btn btn-dark" (click)="sendDataToAPI()">查詢</button>
+      <div class="search2">
+        <button class="btn btn-dark" (click)="sendDataToAPI()">查詢</button>
+      </div>
       <div class="btn2">
-        <button class="btn btn-danger" (click)="clearInputs()">清除</button>
-        <button class="btn btn-success" (click)="sortAppointments()">日期排序</button>
+        <div class="clear">
+          <button class="btn btn-danger" (click)="clearInputs()">清除</button>
+        </div>
+        <div class="sort">
+          <button class="btn btn-success" (click)="sortAppointments()">日期排序</button>
+        </div>
+        <div class="datefilter2">
+          <button class="btn btn-primary" (click)="toggleDateFilter()">日期篩選</button>
+        </div>
       </div>
     </div>
+
+
+
+    <div class="datefilter" *ngIf="showDateFilter">
+      <div class="date-input">
+        <label for="startDateInput">起始日期：</label>
+        <input type="date" id="startDateInput" [(ngModel)]="startDate">
+        <label for="endDateInput">結束日期：</label>
+        <input type="date" id="endDateInput" [(ngModel)]="endDate">
+    </div>
+    <div class="filter">
+      <button class="btn btn-dark" (click)="onFilterButtonClick()">篩選</button>
+    </div>
+    </div>
+
+
 
     <div class="searchText">
       <p *ngIf="appointments.length > 0">{{ searchText }}</p>
@@ -34,9 +62,11 @@
       </div> <br>
     </div>
 
+
     <div *ngIf="appointments.length > 0">
       <div *ngFor="let appointment of appointments" class="card" (click)="navigateToAreaComponent(appointment)">
         <div class="card-content">
+
           <div class="card-number">
             <p>{{ appointments.indexOf(appointment) + 1 }}</p>
           </div>
@@ -48,7 +78,6 @@
             <p>上車地點 : {{ appointment.PUAddress }}</p>
             <p>下車地點 : {{ appointment.DPAddress }}</p>
           </div>
-
         </div>
       </div>
     </div>
@@ -58,7 +87,6 @@
       <p>查無資料，請重新確認輸入資料！</p>
     </div>
   </div>
-
 
 
 
