--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -12,7 +12,7 @@
 
     <mat-menu #menu="matMenu">
       <button mat-menu-item [matMenuTriggerFor]="booking">預約訂車</button>
-      <button mat-menu-item routerLink="menu/search">趟次管理</button>
+      <button mat-menu-item routerLink="menu/search">趟次查詢</button>
       <button mat-menu-item [matMenuTriggerFor]="quota">長照查詢</button>
       <button mat-menu-item routerLink="menu/download">文件下載</button>
 
