新增預約選項

--- a/src/app/page/menu/booking/new-taipei/new-taipei.component.css
+++ b/src/app/page/menu/booking/new-taipei/new-taipei.component.css
@@ -38,6 +38,12 @@ h1{
 
 .options{
   font-size: 0.9rem;
+  margin-right: 5px;
 }
 
+
+.radio-group{
+  display: flex;
+  justify-content: space-between;
+}
 
