--- a/src/app/page/menu/booking/new-taipei/new-taipei.component.html
+++ b/src/app/page/menu/booking/new-taipei/new-taipei.component.html
@@ -79,8 +79,17 @@
 
   <div class="form-group">
     <label for="Option">預約項目：  </label>
-    <input type="radio" class="options " value="爬梯機+交通" formControlName="Option" >爬梯機+交通
-    <input type="radio" class="options" value="僅爬梯機"  formControlName="Option">僅爬梯機
+    <div class="radio-group">
+      <div class="1">
+        <input type="radio" class="options " value="爬梯機+交通" formControlName="Option" >爬梯機+交通
+      </div>
+      <div class="2">
+        <input type="radio" class="options" value="僅交通"  formControlName="Option">僅交通
+      </div>
+      <div class="3">
+        <input type="radio" class="options" value="僅爬梯機"  formControlName="Option">僅爬梯機
+      </div>
+    </div>
   </div>
 
 
