--- a/src/app/page/menu/quota/quota-search/quota-search.component.html
+++ b/src/app/page/menu/quota/quota-search/quota-search.component.html
@@ -26,7 +26,8 @@
   </div>
 
   <div *ngIf="LTCQuotaList.length === 0 && showNoDataMessage" class="no-data-text">
-    <p>查無資料，請重新確認輸入內容，新個案請聯絡Line@人員協助下載，謝謝！</p>
+    <p>查無資料，請重新確認輸入內容</p>
+    <p>新個案請點擊下方Line@，通知人員協助下載，謝謝！</p>
     <a href="https://lin.ee/F9sIMMq" target="_blank">新北爬梯機Line@</a>
   </div>
 
@@ -34,22 +35,46 @@
     <div *ngFor="let quota of quotas" class="quota-card">
       <p>個案姓名： {{ quota.PassengerName }}</p>
       <p>身分證字號： {{ quota.PassengerId }}</p>
-      <p>編號： {{ quota.Number }}</p>
 
-      <p>剩餘額度： {{ quota.Quota }}</p>
-      <div *ngIf="quota.Quota < 4000" class="text-danger">
-        <h4>額度即將使用完畢，如需轉市款專案或有其他問題，請通知相關人員處理，謝謝！ </h4>
+
+      <div *ngIf="quota.Number !==''  " >
+        <h4>編號：{{quota.Number}}</h4>
+      </div>
+      <div *ngIf="quota.Number ===''  " >
+        <h4>編號：查無編號紀錄</h4>
+      </div>
+
+
+      <div *ngIf="quota.Quota !=='' && quota.Quota > 4001 " >
+        <p>剩餘額度：{{ quota.Quota }}</p>
+      </div>
+      <div *ngIf="quota.Quota < 4000 && quota.Quota>0" class="text-danger">
+        <p>剩餘額度：{{ quota.Quota }}</p>
+        <p>額度即將使用完畢，如需轉市款專案或有其他問題，請通知相關人員處理，謝謝！ </p>
+      </div>
+      <div *ngIf="quota.Quota === ''" class="text-danger">
+        <p>剩餘額度：查無請款紀錄</p>
+      </div>
+      <div *ngIf="quota.Quota ==='市款' " >
+        <p>剩餘額度：{{ quota.Quota }}</p>
       </div>
 
 
       <div *ngIf="quota.PdfUrl === ''">
+        <p>請款表連結：查無請款表檔案</p>
       </div>
-      <div *ngIf="quota.PdfUrl !== ''" >
+      <div *ngIf="quota.PdfUrl !== '' && quota.PdfUrl !== '撐桿' && quota.PdfUrl !== '履帶'" >
         <p>請款表連結：
           <a [href]="quota.PdfUrl" target="_blank" *ngIf="quota.PdfUrl !== ''">
             點我下載
           </a>
         </p>
+      </div>
+      <div *ngIf="quota.PdfUrl === '撐桿'">
+        <p>型號：撐桿式</p>
+      </div>
+      <div *ngIf="quota.PdfUrl === '履帶'">
+        <p>型號：履帶式</p>
       </div>
 
 
@@ -60,9 +85,6 @@
         <p>資料更新日期：{{ quota.UpdateDate }}</p>
       </div>
     </div>
-
-
-
   </div>
 
 </div>
