--- a/src/app/page/menu/booking/taipei/taipei.component.html
+++ b/src/app/page/menu/booking/taipei/taipei.component.html
@@ -93,9 +93,11 @@
 
 
 
-<div class="btn">
-  <button type="submit" class="btn btn-dark">提交</button>
-</div>
+  <div class="btn">
+    <button type="submit" class="btn btn-dark" [disabled]="isSubmitting">
+      {{ buttonText }}
+    </button>
+  </div>
 
 </form>
 
