--- a/src/app/page/menu/booking/new-taipei/new-taipei.component.css
+++ b/src/app/page/menu/booking/new-taipei/new-taipei.component.css
@@ -47,3 +47,16 @@ h1{
   justify-content: space-between;
 }
 
+
+
+
+:host ::ng-deep .timepicker .p-calendar {
+  height: 35px;
+  width: 100%;
+}
+
+
+:host ::ng-deep .timepicker .p-calendar {
+  height: 35px !important;
+  width: 100%;
+}
