--- a/src/app/page/menu/booking/taoyuan/taoyuan.component.css
+++ b/src/app/page/menu/booking/taoyuan/taoyuan.component.css
@@ -49,12 +49,7 @@ h1{
 
 
 :host ::ng-deep .timepicker .p-calendar {
-  height: 35px;
-  width: 100%;
-}
-
-
-:host ::ng-deep .timepicker .p-calendar {
   height: 35px !important;
   width: 100%;
+  text-align: center;
 }
