--- a/src/app/page/menu/booking/new-taipei/new-taipei.component.css
+++ b/src/app/page/menu/booking/new-taipei/new-taipei.component.css
@@ -49,14 +49,9 @@ h1{
 
 
 
-
-:host ::ng-deep .timepicker .p-calendar {
-  height: 35px;
-  width: 100%;
-}
-
-
 :host ::ng-deep .timepicker .p-calendar {
   height: 35px !important;
   width: 100%;
+  text-align: center;
 }
+
